--- a/css/styles.css
+++ b/css/styles.css
@@ -57,3 +57,12 @@ body{
     left: 0;
     min-height: 300px;
 }
+.modal-content{
+    color: black;
+}
+#carouselButton {
+    right:0px;
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
+}
